--- a/index.html
+++ b/index.html
@@ -5,16 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive-Football</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6b2b2803de.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <!-- Header start from here -->
     <header>
     </header>
+    <!-- Header end -->
     <!-- Main Thing Start from Here -->
     <main>
-        <section class="Top-banner">
-
+        <section class="top-banner">
+            <div class="top-text">
+                <h1>
+                    Conmebol
+                    Copa America
+                    2021
+                </h1>
+                <a class="top-button" href="">Watch Live <i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="top-photo">
+                <img src="images/banner.png" alt="">
+            </div>
         </section>
     </main>
 </body>
