--- a/index.html
+++ b/index.html
@@ -32,6 +32,153 @@
                 <img src="images/banner.png" alt="">
             </div>
         </section>
+        <!-- These are the details of players with their photo -->
+        <section class="football-players">
+            <article class="player">
+                <div class="player-photo">
+                    <img src="images/players/player-1.png" alt="">
+                </div>
+                <div class="player-title">
+                    <h1>player Jr</h1>
+                </div>
+                <div class="player-detail">
+                    <p>player da Silva Santos Júnior, known as player, is a Brazilian professional footballer who plays
+                        as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team</p>
+                </div>
+            </article>
+            <article class="player">
+                <div class="player-photo">
+                    <img src="images/players/player-2.png" alt="">
+                </div>
+                <div class="player-title">
+                    <h1>Lionel Messi</h1>
+                </div>
+                <div class="player-detail">
+                    <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an
+                        attacking midfielder and captains the Argentina national team</p>
+                </div>
+            </article>
+            <article class="player">
+                <div class="player-photo">
+                    <img src="images/players/player-3.png" alt="">
+                </div>
+                <div class="player-title">
+                    <h1>Cristiano Ronaldo</h1>
+                </div>
+                <div class="player-detail">
+                    <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays
+                        as a forward for Serie</p>
+                </div>
+            </article>
+            <article class="player">
+                <div class="player-photo">
+                    <img src="images/players/player-4.png" alt="">
+                </div>
+                <div class="player-title">
+                    <h1>Paulo Dybala</h1>
+                </div>
+                <div class="player-detail">
+                    <p>Paulo Exequiel Dybala is an Argentine professional footballer who plays as a forward for Serie A
+                        club Juventus and the Argentina national team</p>
+                </div>
+            </article>
+            <article class="player">
+                <div class="player-photo">
+                    <img src="images/players/player-5.png" alt="">
+                </div>
+                <div class="player-title">
+                    <h1>Mesut Ozil</h1>
+                </div>
+                <div class="player-detail">
+                    <p>Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper Lig
+                        club Fenerbahçe. Nicknamed "The Assist King"</p>
+                </div>
+            </article>
+            <article class="player">
+                <div class="player-photo">
+                    <img src="images/players/player-6.png" alt="">
+                </div>
+                <div class="player-title">
+                    <h1>Mauro Icardi</h1>
+                </div>
+                <div class="player-detail">
+                    <p>Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for Ligue 1
+                        club Paris Saint-Germain and the Argentina national team.</p>
+                </div>
+            </article>
+            <article class="player">
+                <div class="player-photo">
+                    <img src="images/players/player-7.png" alt="">
+                </div>
+                <div class="player-title">
+                    <h1>Di Maaria</h1>
+                </div>
+                <div class="player-detail">
+                    <p>player da Silva Santos Júnior, known as player, is a Brazilian professional footballer who plays
+                        as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team</p>
+                </div>
+            </article>
+            <article class="player">
+                <div class="player-photo">
+                    <img src="images/players/player-8.png" alt="">
+                </div>
+                <div class="player-title">
+                    <h1>Kaylian ambappe</h1>
+                </div>
+                <div class="player-detail">
+                    <p>player da Silva Santos Júnior, known as player, is a Brazilian professional footballer who plays
+                        as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team</p>
+                </div>
+            </article>
+            <article class="player">
+                <div class="player-photo">
+                    <img src="images/players/player-9.png" alt="">
+                </div>
+                <div class="player-title">
+                    <h1>Mohammed Salah</h1>
+                </div>
+                <div class="player-detail">
+                    <p>player da Silva Santos Júnior, known as player, is a Brazilian professional footballer who plays
+                        as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team</p>
+                </div>
+            </article>
+            <article class="player">
+                <div class="player-photo">
+                    <img src="images/players/player-10.png" alt="">
+                </div>
+                <div class="player-title">
+                    <h1>Harry Kanne</h1>
+                </div>
+                <div class="player-detail">
+                    <p>player da Silva Santos Júnior, known as player, is a Brazilian professional footballer who plays
+                        as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team</p>
+                </div>
+            </article>
+            <article class="player">
+                <div class="player-photo">
+                    <img src="images/players/player-11.png" alt="">
+                </div>
+                <div class="player-title">
+                    <h1>Kevin De Bruyne</h1>
+                </div>
+                <div class="player-detail">
+                    <p>player da Silva Santos Júnior, known as player, is a Brazilian professional footballer who plays
+                        as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team</p>
+                </div>
+            </article>
+            <article class="player">
+                <div class="player-photo">
+                    <img src="images/players/player-12.png" alt="">
+                </div>
+                <div class="player-title">
+                    <h1>Philippe Countinho</h1>
+                </div>
+                <div class="player-detail">
+                    <p>player da Silva Santos Júnior, known as player, is a Brazilian professional footballer who plays
+                        as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team</p>
+                </div>
+            </article>
+        </section>
     </main>
 </body>
 
