--- a/index.html
+++ b/index.html
@@ -179,7 +179,51 @@
                 </div>
             </article>
         </section>
+        <!-- It is the follow Section -->
+        <section class="follow">
+            <section class="follow-item">
+                <div class="follow-pic">
+                    <img src="images/follow-1.png" alt="">
+                </div>
+                <div class="follow-detail">
+                    <h2>Paris</h2>
+                    <button type="follow">Follow</button>
+                </div>
+            </section>
+            <section class="follow-item">
+                <div class="follow-pic">
+                    <img src="images/follow-2.png" alt="">
+                </div>
+                <div class="follow-detail">
+                    <h2>FC Barcelona</h2>
+                    <button type="follow">Follow</button>
+                </div>
+            </section>
+            <section class="follow-item">
+                <div class="follow-pic">
+                    <img src="images/follow-3.png" alt="">
+                </div>
+                <div class="follow-detail">
+                    <h2>Manchester United</h2>
+                    <button type="follow">Follow</button>
+                </div>
+            </section>
+        </section>
     </main>
+    <footer class="footer">
+        <div class="footer-image">
+            <img src="images/Logo.png" alt="">
+        </div>
+        <div class="footer-icon">
+            <i class="fab fa-instagram-square"></i>
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-youtube-square"></i>
+            <i class="fab fa-twitter-square"></i>
+        </div>
+        <div class="footer-text">
+            <p>Copyright <i class="far fa-copyright"></i> 2022 Football</p>
+        </div>
+    </footer>
 </body>
 
 </html>
